# pycoalescence

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  README.rst  bitbucket-pipelines.yml  build.sh  meta.yaml  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  testing_script2.py
.circleci/: config.yml
.docker/: Dockerfile
.docker/py2/: Dockerfile
.docker/py3/: Dockerfile
docs/: Doxyfile  README_PyCoalescence.rst  README_merger.rst  README_necsim.rst  README_pycoalescence.rst  builds.rst  citations.rst  conda_version.rst  conf.py  environment.yml  index.rst  modules.rst  necsim.rst  pycoalescence.rst  pypi_version.rst  readthedocs.yml  requirements.txt
docs/Exhaled/: class_ApplySpec.rst  class_Cell.rst  class_Datamask.rst  class_Datapoint.rst  class_DispersalCoordinator.rst  class_Map.rst  class_Matrix.rst  class_ProtractedTree.rst  class_ReproductionMap.rst  class_Row.rst  class_SimulateDispersal.rst  class_SpeciesList.rst  class_Treelist.rst  define_AM.rst  define_APPLY_SPEC_IMPORT.rst  define_DISPERSAL_IMPORT.rst  define_GETSTATE.rst  define_IA1.rst  define_IM2.rst  define_IMM1.rst  define_INITERROR.rst  define_MATRIX.rst  define_NTAB.rst  define_PYTHON_COMPILE.rst  define_null.rst  define_sql_ram.rst  file_.d.rst  file_ApplySpec.cpp.rst  file_ApplySpec.h.rst  file_ConfigFileParser.cpp.rst  file_CustomExceptions.h.rst  file_Datamask.h.rst  file_Datapoint.h.rst  file_DispersalCoordinator.cpp.rst  file_DispersalCoordinator.h.rst  file_LicenseHeader.h.rst  file_Map.cpp.rst  file_ProtractedTree.h.rst  file_README.md.rst  file_ReproductionMap.cpp.rst  (+62 more)
docs/_build/: .buildinfo
docs/api/: api_library.rst  class_Community.rst  class_DispersalCoordinator.rst  class_TreeNode.rst  define_AM.rst  define_IR2.rst  define_NTAB.rst  define_RNMX.rst  dir_necsim.rst  file_necsim_Community.h.rst  file_necsim_DataMask.cpp.rst  file_necsim_DispersalCoordinator.cpp.rst  file_necsim_DispersalCoordinator.h.rst  file_necsim_Filesystem.h.rst  file_necsim_Metacommunity.h.rst  file_necsim_Step.h.rst  (+23 more)
pycoalescence/: __init__.py  batch_process.py  coalescence_tree.py  dispersal_simulation.py  fragment_config.py  fragments.py  future_except.py  helper.py  hpc_setup.py  installer.py  landscape.py  landscape_metrics.py  map.py  merger.py  patched_landscape.py  setup.py  simulation.py  spatial_algorithms.py  sqlite_connection.py  system_operations.py  test_install.py
pycoalescence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pycoalescence/lib/: .gitignore  CCommunity.h  CLandscapeMetricsCalculator.h  CMakeLists.txt  CSimulateDispersal.h  CSimulation.h  LandscapeMetricsCalculator.cpp  LandscapeMetricsCalculator.h  Makefile.in  Perf_vals.txt  ProtractedSim.txt  PyImports.cpp  PyImports.h  PyLogger.cpp  PyLogger.h  PyLogging.cpp  PyLogging.h  PyTemplates.h  README.md  SpeciationCounter.cpp  aclocal.m4  applyspecmodule.cpp  applyspecmodule.h  configure.ac  depends_default  dispersalmodule.cpp  dispersalmodule.h  landscapemetricsmodule.cpp  landscapemetricsmodule.h  necsim  necsim.cpp  necsim.h  necsimmodule.cpp  necsimmodule.h
pycoalescence/lib/Documentation/latex/: _custom_exceptions_8h.tex  _custom_exceptions_8h__dep__incl.dot  _custom_exceptions_8h__dep__incl.md5  _custom_exceptions_8h__incl.dot  _custom_exceptions_8h__incl.md5  _datapoint_8h.tex  _datapoint_8h__dep__incl.dot  _datapoint_8h__dep__incl.md5  _datapoint_8h__incl.dot  _datapoint_8h__incl.md5  _dispersal_coordinator_8cpp.tex  _dispersal_coordinator_8cpp__incl.dot  _dispersal_coordinator_8cpp__incl.md5  _dispersal_coordinator_8h.tex  _dispersal_coordinator_8h__dep__incl.dot  _dispersal_coordinator_8h__dep__incl.md5  _dispersal_coordinator_8h__incl.dot  _dispersal_coordinator_8h__incl.md5  _fattaildeviate_8h.tex  _fattaildeviate_8h__dep__incl.dot  _fattaildeviate_8h__dep__incl.md5  _fattaildeviate_8h__incl.dot  _fattaildeviate_8h__incl.md5  _logging_8cpp.tex  _logging_8cpp__incl.dot  _logging_8cpp__incl.md5  _logging_8h.tex  _logging_8h__dep__incl.dot  _logging_8h__dep__incl.md5  _logging_8h__incl.dot  _logging_8h__incl.md5  _map_8cpp.tex  _map_8cpp__incl.dot  _map_8cpp__incl.md5  _map_8h.tex  _map_8h__dep__incl.dot  _map_8h__dep__incl.md5  _map_8h__incl.dot  _map_8h__incl.md5  _matrix_8h.tex  (+180 more)
pycoalescence/lib/Documentation/xml/: _8d.xml  _apply_spec_8cpp.xml  _apply_spec_8h.xml  _config_file_parser_8cpp.xml  _config_file_parser_8h.xml  _custom_exceptions_8h.xml  _datamask_8h.xml  _datapoint_8h.xml  _dispersal_coordinator_8cpp.xml  _dispersal_coordinator_8h.xml  _fattaildeviate_8h.xml  _license_header_8h.xml  _logging_8cpp.xml  _logging_8h.xml  _map_8cpp.xml  _map_8h.xml  _matrix_8h.xml  _protracted_tree_8cpp.xml  _protracted_tree_8h.xml  _r_e_a_d_m_e_8md.xml  _reproduction_map_8cpp.xml  _reproduction_map_8h.xml  _setup_8cpp.xml  _setup_8h.xml  _sim_parameters_8h.xml  _simulate_dispersal_8cpp.xml  _simulate_dispersal_8h.xml  _speciation_counter_8cpp.xml  _species_list_8h.xml  _step_8h.xml  _tree_8cpp.xml  _tree_8h.xml  _treelist_8cpp.xml  _treelist_8h.xml  _treenode_8h.xml  applyspecmodule_8cpp.xml  applyspecmodule_8h.xml  bug.xml  class_apply_spec.xml  class_config_option.xml  (+41 more)
pycoalescence/lib/SimTest/: main.cpp
pycoalescence/lib/cmake/: FindGDAL.cmake
pycoalescence/lib/m4/: boost.m4
pycoalescence/lib/necsim/: Community.cpp  Community.h  ConfigFileParser.cpp  ConfigFileParser.h  CustomExceptions.h  DataMask.cpp  DataMask.h  DataPoint.cpp  DataPoint.h  DispersalCoordinator.cpp  DispersalCoordinator.h  Filesystem.cpp  Filesystem.h  LICENSE.txt  LicenseHeader.h  LogFile.cpp  LogFile.h  Logging.cpp  Logging.h  Map.cpp  Map.h  Matrix.h  Metacommunity.cpp  Metacommunity.h  NRrand.h  ProtractedSpatialTree.h  ProtractedTree.cpp  ProtractedTree.h  ReproductionMap.cpp  ReproductionMap.h  Setup.cpp  Setup.h  SimParameters.h  SimulateDispersal.cpp  SimulateDispersal.h  SimulationTemplates.h  SpatialTree.cpp  SpatialTree.h  SpecSimParameters.h  SpeciationCommands.cpp  (+9 more)
pycoalescence/lib/necsim/fast-cpp-csv-parser/: csv.h
temp/: mainconf_1_1.txt  mainconf_1_2.txt  mainconf_1_3.txt
(+5639 files in other folders)
