[metadata]
name = pycoalescence
version: attr: pycoalescence.__version__
author = Sam Thompson
author_email = thompsonsed@gmail.com
description = Neutral ecological simulator using coalescence
long_description = file: README.rst
long_description_content_type = text/rst
url = https://github.com/thompsonsed/pycoalescence.git
project_urls =
    Bug Tracker = https://github.com/thompsonsed/pycoalescence.git
    Docs = https://pycoalescence.readthedocs.io/en/release/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
